--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "axios": "^1.5.1",
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.11.0",
+    "react-router-dom": "^6.16.0"
   }
 }
