--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "@nextui-org/react": "^2.1.13",
     "axios": "^1.5.1",
     "next": "13.5.4",
     "react": "^18",
