--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@auth0/nextjs-auth0": "^3.1.0",
     "@nextui-org/react": "^2.1.13",
     "axios": "^1.5.1",
+    "mongodb": "^6.1.0",
+    "mongoose": "^7.5.4",
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
