--- a/package.json
+++ b/package.json
@@ -24,5 +24,10 @@
     "react-router-dom": "^6.16.0",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "next.config.js",
+  "devDependencies": {},
+  "author": "",
+  "license": "ISC"
 }
