create shop page changges

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "@mui/material": "^5.14.12",
     "@nextui-org/react": "^2.1.13",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
