--- a/package.json
+++ b/package.json
@@ -12,19 +12,14 @@
     "@auth0/nextjs-auth0": "^3.1.0",
     "@mui/material": "^5.14.12",
     "@nextui-org/react": "^2.1.13",
-    "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
     "axios": "^1.5.1",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
-    "postcss": "^8.4.31",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "react-router-dom": "^6.16.0",
-    "tailwind": "^4.0.0",
-    "tailwindcss": "^3.3.3"
+    "react-router-dom": "^6.16.0"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
