--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "@mui/material": "^5.14.12",
     "@nextui-org/react": "^2.1.13",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.4",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
     "react": "^18",
+    "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0"
