--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
+    "supports-color": "^8.1.1",
     "swiper": "^10.3.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
