--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.16.0",
     "supports-color": "^8.1.1",
     "swiper": "^10.3.1"
