--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.1.0",
+    "@edgestore/react": "^0.1.4",
+    "@edgestore/server": "^0.1.4",
     "@mui/material": "^5.14.12",
     "@nextui-org/react": "^2.1.13",
     "axios": "^1.5.1",
@@ -25,7 +27,8 @@
     "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.16.0",
     "supports-color": "^8.1.1",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "zod": "^3.22.4"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
