--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.16.0",
     "supports-color": "^8.1.1",
-    "swiper": "^10.3.1",
+    "swiper": "^10.3.1"
   },
   "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
   "main": "next.config.js",
