--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@auth0/nextjs-auth0": "^3.1.0",
     "@mui/material": "^5.14.12",
     "@nextui-org/react": "^2.1.13",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@smastrom/react-rating": "^1.3.2",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.4",
+    "js-cookie": "^3.0.5",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.4",
     "next": "13.5.4",
@@ -23,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-image-magnify": "^2.7.4",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "supports-color": "^8.1.1",
     "swiper": "^10.3.1"
